<resources>
    <string name="app_name">FichApp</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="noregistrado">¿No está registrado?</string>
    <string name="registrar"><u>Registrese aquí</u></string>
    <string name="vacio"></string>
    <!--Activity registro-->
    <string name="registro">Registro</string>
    <string name="hintusuario">Ingrese usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rusuario">Nombre de usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="rcontrasena">Contraseña</string>
    <string name="confcontrasena">Confirmar contraseña</string>
    <string name="title_activity_menuprincipal">Menuprincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--menu appbar-->
    <string name="ajustes">Configurar cuenta</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <!--tomar foto-->
    <string name="etiquetafoto">Para tomar una fotografía, seleccione el siguiente ícono</string>
    <string name="img">img</string>
    <!--menu-->
    <string name="menu">Menú de opciones</string>
    <string name="crear">Crear Ficha</string>
    <string name="ver">Ver Fichas</string>
    <string name="editar">Editar Fichas</string>
    <!--crear ficha-->
    <string name="numeroFicha">N° de Ficha</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">N° de contacto</string>
    <string name="estado">Estado</string>
    <string name="fecha">Fecha</string>
    <string name="btncrear">Guardar Ficha</string>
    <!--editar ficha-->
    <string name="btnbuscar">Buscar</string>
    <string name="nbuscar">N° de ficha</string>
    <!--ficha encontrada-->
    <string name="titulo">Confirmar Ficha</string>
    <string name="btnfoto">Tomar foto</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnEliminar">Eliminar</string>

    <!--ver fichas-->
    <string name="titulover">Listado de Fichas</string>
    <!--Configurar cuenta-->
    <string name="tituloconfiguracion">Configuración de la cuenta</string>
    <string name="btnCambiar">Guardar cambios</string>
    <string name="ncontra">Nueva contraseña</string>

    <!--estados-->
    <string name="pendiente">Pendiente</string>
    <string name="encamino">En camino</string>
    <string name="entregado">Entregado</string>


</resources>